# soundmesh

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GATE_QUICK_REFERENCE.md  README.md  RX_AUDIO_DEBUG.md  extra_script.py  idf_component.yml  meshnet-audio-pio.code-workspace  meshnet-audio.code-workspace  out_log.txt  partitions.csv  platformio.ini  sdkconfig.combo.defaults  sdkconfig.defaults  sdkconfig.out.defaults  sdkconfig.rx  sdkconfig.rx.defaults  sdkconfig.shared.defaults  sdkconfig.src.defaults  sdkconfig.tx  sdkconfig.tx.defaults  soak_test_1.json  soundmesh.code-workspace  src_log.txt
.github/: copilot-instructions.md  mesh-root-election-fix.md
.github/workflows/: ci-core.yml  ci-gate.yml
Documentation/Posts/: 2025-01-07-mesh-audio-breakthrough.md  2025-01-16-tx-usb-audio-refactoring-plan.md  2025-10-07-progress.md
app/tx/: main_old.c
docs/: README.md
docs/architecture/: audio.md  control.md
docs/blog/: 2025-10-19-tier-1-implementation-attempts.md
docs/operations/: GATE_COMPARISON_BEFORE_AFTER.md  OVERFLOW_GATE_SPECIFICATION.md  README.md  deployment-checklists.md  pilot-runbook.md  runbook.md  troubleshooting.md
docs/planning/: audio-layer-architecture.md  control-layer-architecture.md  implementation-roadmap.md  (+7 more)
lib/audio/: CMakeLists.txt  idf_component.yml  library.json
lib/audio/include/: opus.h  tusb_config.h
lib/audio/include/audio/: adc_audio.h  adf_pipeline.h  es8388_audio.h  i2s_audio.h  opus_codec.h  pcm_convert.h  ring_buffer.h  rx_underrun_concealment.h  sequence_tracker.h  tone_gen.h  usb_audio.h
lib/audio/src/: adc_audio.c  adf_pipeline.c  adf_pipeline_core.c  adf_pipeline_fft.c  adf_pipeline_internal.h  adf_pipeline_rx.c  adf_pipeline_state.h  adf_pipeline_tx.c  adf_pipeline_usb_fallback.h  es8388_audio.c  i2s_audio.c  opus_codec.c  opus_stub.c  ring_buffer.c  rx_underrun_concealment.c  sequence_tracker.c  tone_gen.c  usb_audio.c
lib/network/: CMakeLists.txt  library.json
lib/network/include/network/: audio_transport.h  frame_codec.h  mesh_net.h  mixer_control.h  uplink_control.h
lib/network/src/: audio_transport.c  frame_codec.c  mesh_net.c  mixer_control.c  uplink_control.c
lib/network/src/mesh/: mesh_dedupe.c  mesh_dedupe.h  mesh_events.c  mesh_events.h  mesh_heartbeat.c  mesh_heartbeat.h  mesh_identity.c  mesh_identity.h  mesh_init.c  mesh_init.h  mesh_mixer.c  mesh_mixer.h  mesh_ping.c  mesh_ping.h  mesh_queries.c  mesh_queries.h  mesh_rx.c  mesh_rx.h  mesh_state.c  mesh_state.h  mesh_tx.c  mesh_tx.h  mesh_uplink.c  mesh_uplink.h
portal/: app.css  app.js  astro.config.mjs  build.sh  index.html  package.json
src/: CMakeLists.txt  idf_component.yml
tools/: __init__.py  capture_serial.py  hil_fault_matrix.py  hil_soak_check.py  multi_monitor.py  pio_prebuild_portal.py  preupload_gate.sh  test_all.sh  usb_compound_autoflash.py  usb_runtime_esptool_probe.sh
(+297 files in other folders)
